# health

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  SPEC_agent.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  vitest.config.ts
agent_service/: Dockerfile  config.yaml  pyproject.toml
agent_service/src/health_agent/: context.py  main.py  service.py
agent_service/src/health_agent/tools/: client.py  coaching_tools.py  read_tools.py  write_tools.py
agent_service/tests/: conftest.py  test_tools.py  test_write_tools.py
docker/: entrypoint.sh
prisma/: schema.prisma  seed.ts
prisma/migrations/20260621053453_init_user/: migration.sql
prisma/migrations/20260621091927_add_user_isadmin/: migration.sql
prisma/migrations/20260621102416_m2_data_model/: migration.sql
prisma/migrations/20260621102500_system_exercise_partial_index/: migration.sql
prisma/migrations/20260621143530_add_exercise_isarchived/: migration.sql
prisma/migrations/20260621151818_add_exercise_instructions_pitfalls/: migration.sql
prisma/migrations/20260622143819_add_onboarding_complete/: migration.sql
prisma/migrations/20260622153438_add_body_metric_created_at/: migration.sql
scripts/: dev-seed.ts  migrate-muscle-groups.ts
src/: auth.config.ts  auth.ts  proxy.ts
src/__tests__/: setup.ts
src/__tests__/analytics/: adherence.test.ts  dashboard.test.ts  (+6 more)
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: ai-insights.ts  constants.ts  dates.ts  db.ts  rate-limit.ts  superset-color.ts  units.ts
src/types/: next-auth.d.ts
(+168 files in other folders)
